Refactor external launch creation in NewWidgetsetWizard in preparation for Vaadin 7 widgetset compilation support (see #9488)
git-svn-id: https://dev.vaadin.com/svn/integration/eclipse@24410 de684a11-831f-0410-ab27-cb86445eb682