@@ -28,6 +28,7 @@ import org.eclipse.jdt.core.IPackageFragmentRoot;
 import org.eclipse.jdt.core.IType;
 import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.JavaModelException;
+import org.eclipse.jdt.launching.IJavaLaunchConfigurationConstants;
 import org.eclipse.jdt.launching.IVMInstall;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.operation.IRunnableWithProgress;
@@ -165,7 +166,18 @@ public class NewWidgetsetWizard extends Wizard implements INewWizard {
             monitor.worked(1);
 
             // create an external launch configuration
-            createBuildScript(monitor);
+            try {
+                IType createdType = page.getCreatedType();
+                createCompileWidgetsetLaunch(page.getProject(), "Compile"
+                        + createdType.getElementName(),
+                        createdType.getFullyQualifiedName(),
+                        page.compileWidgetset(), monitor);
+            } catch (CoreException e) {
+                ErrorUtil
+                        .displayError(
+                                "Failed to create a launch configuration for compiling a widgetset",
+                                e, getShell());
+            }
             monitor.worked(1);
 
             modifyWebXMLToUsesWidgetSet();
@@ -197,12 +209,22 @@ public class NewWidgetsetWizard extends Wizard implements INewWizard {
      * Create either an external launch configuration that builds a widgetset
      * and refreshes the build target directory in the workspace
      * 
+     * @param project
+     * @param widgetsetType
+     * @param compileWidgetset
+     *            true to run the launch after creating it
      * @param monitor
+     * @throws CoreException
      */
     @SuppressWarnings("deprecation")
-    private void createBuildScript(IProgressMonitor monitor) {
+    public static ILaunchConfiguration createCompileWidgetsetLaunch(
+            IProject project, String launchName, String moduleName,
+            boolean compileWidgetset, IProgressMonitor monitor)
+            throws CoreException {
 
-        IType createdType = page.getCreatedType();
+        if (project == null) {
+            return null;
+        }
 
         ILaunchManager manager = DebugPlugin.getDefault().getLaunchManager();
 
@@ -210,81 +232,91 @@ public class NewWidgetsetWizard extends Wizard implements INewWizard {
         ILaunchConfigurationType type = manager
                 .getLaunchConfigurationType(IExternalToolConstants.ID_PROGRAM_LAUNCH_CONFIGURATION_TYPE);
 
-        try {
-
-            IProject project = page.getProject();
-
-            ILaunchConfigurationWorkingCopy workingCopy = type.newInstance(
-                    project, "Compile" + createdType.getElementName());
-
-            // get the project VM or the default java VM path from Eclipse
-            IJavaProject jproject = JavaCore.create(project);
-            IVMInstall vmInstall = VaadinPluginUtil.getJvmInstall(jproject,
-                    true);
-            String vmName = VaadinPluginUtil.getJvmExecutablePath(vmInstall);
-            workingCopy.setAttribute(IExternalToolConstants.ATTR_LOCATION,
-                    vmName);
-
-            // refresh only WebContent/VAADIN/widgetsets
-            IWorkingSetManager workingSetManager = PlatformUI.getWorkbench()
-                    .getWorkingSetManager();
-            IFolder wsDir = ProjectUtil.getWebContentFolder(project)
-                    .getFolder(VaadinPlugin.VAADIN_RESOURCE_DIRECTORY)
-                    .getFolder("widgetsets");
-
-            // refresh this requires that the directory exists
-            VaadinPluginUtil.createFolders(wsDir, monitor);
-
-            IWorkingSet workingSet = workingSetManager
-                    .createWorkingSet("launchConfigurationWorkingSet",
-                            new IAdaptable[] { wsDir });
-            workingCopy.setAttribute(RefreshTab.ATTR_REFRESH_SCOPE,
-                    RefreshTab.getRefreshAttribute(workingSet));
-            // alternatively, could refresh the whole project
-            // workingCopy.setAttribute(RefreshTab.ATTR_REFRESH_SCOPE,
-            // "${project}");
-
-            workingCopy.setAttribute(
-                    IExternalToolConstants.ATTR_WORKING_DIRECTORY,
-                    "${project_loc:/" + project.getName() + "}");
-
-            // construct the class path, including GWT JARs and project sources
-            String classPath = VaadinPluginUtil.getProjectBaseClasspath(
-                    jproject, vmInstall, false);
-
-            // construct rest of the arguments for the launch
-
-            String moduleName = createdType.getFullyQualifiedName();
-            moduleName = moduleName.replace(".client.", ".");
-
-            String vmargs = "-Djava.awt.headless=true -Xss8M -Xmx500M";
-            if (PlatformUtil.getPlatform().equals("mac")) {
-                vmargs += " -XstartOnFirstThread";
+        // find and return existing launch, if any
+        ILaunchConfiguration[] launchConfigurations = manager
+                .getLaunchConfigurations();
+        for (ILaunchConfiguration launchConfiguration : launchConfigurations) {
+            if (launchName.equals(launchConfiguration.getName())) {
+                // is the launch in the same project?
+                String launchProject = launchConfiguration
+                        .getAttribute(
+                                IJavaLaunchConfigurationConstants.ATTR_PROJECT_NAME,
+                                "");
+                if (project.getName().equals(launchProject)) {
+                    ErrorUtil.logInfo(launchName
+                            + " launch already exists for the project");
+                    if (compileWidgetset) {
+                        launchConfiguration.launch(ILaunchManager.RUN_MODE,
+                                null);
+                    }
+                    return launchConfiguration;
+                }
             }
-
-            String compilerClass = VaadinPlugin.GWT_COMPILER_CLASS;
-
-            String wsDirString = wsDir.getProjectRelativePath()
-                    .toPortableString();
-            String arguments = vmargs + " -classpath \"" + classPath + "\" "
-                    + compilerClass + " -out " + wsDirString + " " + moduleName;
-
-            workingCopy.setAttribute(
-                    IExternalToolConstants.ATTR_TOOL_ARGUMENTS, arguments);
-
-            // save the launch
-            ILaunchConfiguration conf = workingCopy.doSave();
-
-            if (page.compileWidgetset()) {
-                conf.launch(ILaunchManager.RUN_MODE, null);
-            }
-
-        } catch (CoreException e) {
-            ErrorUtil
-                    .displayError(
-                            "Failed to create a launch configuration for compiling a widgetset",
-                            e, getShell());
         }
+
+        ILaunchConfigurationWorkingCopy workingCopy = type.newInstance(project,
+                launchName);
+
+        // get the project VM or the default java VM path from Eclipse
+        IJavaProject jproject = JavaCore.create(project);
+        IVMInstall vmInstall = VaadinPluginUtil.getJvmInstall(jproject, true);
+        String vmName = VaadinPluginUtil.getJvmExecutablePath(vmInstall);
+        workingCopy.setAttribute(IExternalToolConstants.ATTR_LOCATION, vmName);
+
+        // refresh only WebContent/VAADIN/widgetsets
+        IWorkingSetManager workingSetManager = PlatformUI.getWorkbench()
+                .getWorkingSetManager();
+        IFolder wsDir = ProjectUtil.getWebContentFolder(project)
+                .getFolder(VaadinPlugin.VAADIN_RESOURCE_DIRECTORY)
+                .getFolder("widgetsets");
+
+        // refresh this requires that the directory exists
+        VaadinPluginUtil.createFolders(wsDir, monitor);
+
+        IWorkingSet workingSet = workingSetManager.createWorkingSet(
+                "launchConfigurationWorkingSet", new IAdaptable[] { wsDir });
+        workingCopy.setAttribute(RefreshTab.ATTR_REFRESH_SCOPE,
+                RefreshTab.getRefreshAttribute(workingSet));
+        // alternatively, could refresh the whole project
+        // workingCopy.setAttribute(RefreshTab.ATTR_REFRESH_SCOPE,
+        // "${project}");
+
+        workingCopy.setAttribute(IExternalToolConstants.ATTR_WORKING_DIRECTORY,
+                "${project_loc:/" + project.getName() + "}");
+
+        // construct the class path, including GWT JARs and project sources
+        String classPath = VaadinPluginUtil.getProjectBaseClasspath(jproject,
+                vmInstall, false);
+
+        // construct rest of the arguments for the launch
+
+        moduleName = moduleName.replace(".client.", ".");
+
+        String vmargs = "-Djava.awt.headless=true -Xss8M  -Xmx512M -XX:MaxPermSize=512M";
+        if (PlatformUtil.getPlatform().equals("mac")) {
+            vmargs += " -XstartOnFirstThread";
+        }
+
+        String compilerClass = VaadinPlugin.GWT_COMPILER_CLASS;
+
+        String wsDirString = wsDir.getProjectRelativePath().toPortableString();
+        String arguments = vmargs + " -classpath \"" + classPath + "\" "
+                + compilerClass + " -out " + wsDirString
+                + " -style OBF -localWorkers "
+                + Runtime.getRuntime().availableProcessors()
+                + " -logLevel INFO " + moduleName;
+
+        workingCopy.setAttribute(IExternalToolConstants.ATTR_TOOL_ARGUMENTS,
+                arguments);
+
+        // save the launch
+        ILaunchConfiguration conf = workingCopy.doSave();
+
+        if (compileWidgetset) {
+            conf.launch(ILaunchManager.RUN_MODE, null);
+        }
+
+        return conf;
 
     }
 
